# chess-embedded

./: .gitignore  CMakeLists.txt  README.md  main.cpp  platformio.ini
include/: Bishop.h  Board.h  Figure.h  Highlight.h  King.h  Knight.h  Pawn.h  Pins.hpp  Positions.h  Queen.h  Rook.h  State.h  StatesManager.hpp  diagonals.h  king_possible_move.h  knight_moves.h  pos.h  straight_lines.h  utils.h
src/: Board.cpp  main.cpp  main_io.cpp  main_natalie.cpp  main_prod.cpp
src/Bishop/: Bishop.cpp  Bishop.h
src/Board/: Board.cpp  Board.h
src/Figure/: Figure.cpp
src/Figures/: Positions.cpp  Positions.h
src/Figures/Bishop/: Bishop.cpp  Bishop.h
src/Figures/Figure/: Figure.cpp  Figure.h
src/Figures/King/: King.cpp  King.h
src/Figures/Knight/: Knight.cpp  Knight.h
src/Figures/Pawn/: Pawn.cpp  Pawn.h
src/Figures/Queen/: Queen.cpp  Queen.h
src/Figures/Rook/: Rook.cpp  Rook.h
src/Figures/auxiliary_functions/: diagonals.cpp  diagonals.h  king_possible_move.cpp  king_possible_move.h  knight_moves.cpp  knight_moves.h  straight_lines.cpp  straight_lines.h
src/Highlight/: Highlight.cpp  Highlight.h
src/Knight/: Knight.h
src/Pawn/: Pawn.cpp  Pawn.h
src/Queen/: Queen.cpp  Queen.h
src/State/: State.cpp
src/States/: State.cpp  StatesManager.cpp
src/States/BlackMoveState/: BlackMoveState.cpp  BlackMoveState.h
src/States/State/: State.h
src/States/WhiteMoveState/: WhiteMoveState.cpp
src/T/: t.cpp  t.h
src/WhiteMoveState/: WhiteMoveState.h
src/structures/: pos.h
